--- a/FacebookCss.css
+++ b/FacebookCss.css
@@ -1,42 +1,52 @@
 *{
     margin: 0px;
     padding: 0px;
+    
 }
+form{
+    width: 425px;
+    height: 500px;
+    margin-left: 35%;
+    margin-top: 5%;
+    border: 1px rgb(203, 190, 172) solid;
+    box-shadow: 0px 5px 8px;
+    background: white;
+}
+body
+{
+    background-color: rgb(222, 219, 216);
+}
+select{
+    width: 125px;
+    margin-left: 10px;
+    margin-top: 10px;
+    height: 25px;
+    font-size: 15px;
+    border-radius: 5px;
+}
+
 .main{
     margin-top: 20px;
     text-align: center;
 
     }
-    form{
-        width: 425px;
-        height: 500px;
-        margin-left: 35%;
-        margin-top: 5%;
-        border: 1px rgb(203, 190, 172) solid;
-        box-shadow: 0px 5px 8px;
-        background: white;
-    }
-    body
-    {
-        background-color: rgb(222, 219, 216);
-    }
-    .main_fourth{
+.main_fourth{
         margin-top: 20px;
         width: 425px;
         padding-left: 35%;
         color: blue;
         font-size: 60px;
     }
-    .main_first{
+.main_first{
         padding-top: 10px;
         padding-bottom: 5px;
     }
-    .main_second{
+.main_second{
         padding-top: 10px;
         padding-bottom: 5px; 
       
     }
-    input{
+input{
         width: 390px;
         background-color: rgb(205, 210, 214);
         height: 25px;
@@ -47,18 +57,11 @@
         margin-top: 10px;
         padding-left: 10px;
         padding-bottom: 5px;
-    }
-    .m1{
+}
+.m1{
         width: 180px;
     }
-    select{
-        width: 125px;
-        margin-left: 10px;
-        margin-top: 10px;
-        height: 25px;
-        font-size: 15px;
-        border-radius: 5px;
-    }
+   
 .main_third >input{
     width: 20px;
 
@@ -67,6 +70,8 @@
     padding-left: 22px;
     text-align: left;
     padding-top: 5px;
+    font-size: 11px;
+    font-style: arial;
 }
 .submit{
     width: 150px;
